test/error/ConstructorOverride.fu
public class Test
{
	public override Test() { //ERROR: Constructor cannot be override
	}
}
